--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -82,7 +82,7 @@
                 android:visibility="visible" />
 
             <ProgressBar
-                android:id="@+id/hangOffProgressBar"
+                android:id="@+id/restProgressBar"
                 style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="70dp"
