--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -125,45 +125,23 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="183dp"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="-45dp"
-        android:layout_marginRight="40dp"
-        android:layout_weight="0"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="287dp">
-
-        <Chronometer
-            android:id="@+id/totalTimeChrono"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="right"
-            android:textAlignment="center"
-            android:textSize="20sp"
-            android:visibility="invisible" />
-
-    </LinearLayout>
-
     <Chronometer
         android:id="@+id/lapseTimeChrono"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginBottom="-20dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
         android:layout_weight="0"
         android:autoText="false"
         android:gravity="bottom|end"
-        android:paddingTop="0dp"
+        android:paddingBottom="40dp"
         android:text="100"
         android:textAlignment="textEnd"
         android:textColor="@android:color/holo_red_dark"
         android:textSize="150sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/infoTextView" />
 
 </android.support.constraint.ConstraintLayout>
