--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -54,6 +54,26 @@
         android:layout_height="wrap_content"
         android:contentDescription="right hand  image" />
 
+    <Chronometer
+        android:id="@+id/lapseTimeChrono"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_weight="0"
+        android:autoText="false"
+        android:gravity="bottom|end"
+        android:paddingBottom="40dp"
+        android:text="100"
+        android:textAlignment="textEnd"
+        android:textColor="@android:color/holo_red_dark"
+        android:textSize="150sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/infoTextView" />
+
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
@@ -124,24 +144,5 @@
 
 
     </LinearLayout>
-
-    <Chronometer
-        android:id="@+id/lapseTimeChrono"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginTop="8dp"
-        android:layout_weight="0"
-        android:autoText="false"
-        android:gravity="bottom|end"
-        android:paddingBottom="40dp"
-        android:text="100"
-        android:textAlignment="textEnd"
-        android:textColor="@android:color/holo_red_dark"
-        android:textSize="150sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/infoTextView" />
 
 </android.support.constraint.ConstraintLayout>
