--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,38 +11,9 @@
 
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
-
-        <ListView
-            android:id="@+id/gradeListView"
-            android:layout_width="50dp"
-
-            android:layout_height="match_parent"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="0dp"
-            android:layout_weight="0"
-            android:choiceMode="singleChoice"
-            android:listSelector="@color/colorAccent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-        </ListView>
-
-        <ListView
-            android:id="@+id/holdsListView"
-            android:layout_width="150dp"
-            android:layout_height="match_parent"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="0dp"
-            android:layout_weight="1"
-            android:choiceMode="singleChoice"
-            android:listSelector="?attr/colorControlHighlight"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-        </ListView>
 
         <LinearLayout
             android:id="@+id/linearLayout"
@@ -125,11 +96,11 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="0dp"
                 android:layout_marginTop="0dp"
-                android:layout_weight="-1"
+                android:layout_weight="0"
                 android:gravity="bottom|right"
                 android:orientation="horizontal"
                 android:paddingTop="0dp">
@@ -160,8 +131,48 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <ListView
+                    android:id="@+id/gradeListView"
+                    android:layout_width="wrap_content"
+
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_weight="3"
+                    android:choiceMode="singleChoice"
+                    android:listSelector="@color/colorAccent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                </ListView>
+
+                <ListView
+                    android:id="@+id/holdsListView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_weight="1"
+                    android:choiceMode="singleChoice"
+                    android:listSelector="?attr/colorControlHighlight"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                </ListView>
+            </LinearLayout>
+
+
+
 
         </LinearLayout>
+
+
 
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
