--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,11 +13,11 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/linearLayout"
-            android:layout_width="350dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="3"
             android:orientation="vertical"
@@ -28,7 +28,9 @@
 
             <RelativeLayout
                 android:layout_width="350dp"
-                android:layout_height="150dp">
+                android:layout_height="150dp"
+                android:layout_gravity="center"
+                android:gravity="end">
 
 
                 <android.support.v4.view.ViewPager
@@ -96,42 +98,6 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="0dp"
-                android:layout_marginTop="0dp"
-                android:layout_weight="0"
-                android:gravity="bottom|right"
-                android:orientation="horizontal"
-                android:paddingTop="0dp">
-
-                <Button
-                    android:id="@+id/timeControlBtn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom|left"
-                    android:layout_weight="1"
-                    android:text="Time Controls" />
-
-                <Button
-                    android:id="@+id/randomizeBtn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom|left"
-                    android:layout_weight="1"
-                    android:text="New 5A Workout" />
-
-                <Button
-                    android:id="@+id/startWorkoutBtn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom|right"
-                    android:layout_weight="1"
-                    android:text="Start workout" />
-
-            </LinearLayout>
-
-            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -167,11 +133,44 @@
                 </ListView>
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="0dp"
+                android:layout_marginTop="0dp"
+                android:layout_weight="0"
+                android:gravity="bottom|right"
+                android:orientation="horizontal"
+                android:paddingTop="0dp">
 
+                <Button
+                    android:id="@+id/timeControlBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|left"
+                    android:layout_weight="1"
+                    android:text="Time Controls" />
+
+                <Button
+                    android:id="@+id/randomizeBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|left"
+                    android:layout_weight="1"
+                    android:text="New 5A Workout" />
+
+                <Button
+                    android:id="@+id/startWorkoutBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|right"
+                    android:layout_weight="1"
+                    android:text="Start workout" />
+
+            </LinearLayout>
 
 
         </LinearLayout>
-
 
 
     </LinearLayout>
