SQLite database extended and couple of setter and getters ready

--- a/app/src/main/res/layout/activity_workout_statistics.xml
+++ b/app/src/main/res/layout/activity_workout_statistics.xml
@@ -23,7 +23,7 @@
                 android:id="@+id/workoutInfoTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/large_text" />
+                android:text="workoutInfoTextView" />
 
             <TextView
                 android:id="@+id/holdInfoTextView"
