--- a/app/src/main/res/layout/activity_edit_workout_info.xml
+++ b/app/src/main/res/layout/activity_edit_workout_info.xml
@@ -54,14 +54,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Save" />
+            android:text="Save / Update Database" />
 
         <Button
-            android:id="@+id/testButton"
+            android:id="@+id/backButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Button" />
+            android:text="Back" />
 
         <TextView
             android:id="@+id/hangInfoTextView"
