Managed to fit listview and buttons in one view in WorkoutStatistics nicely just when not needed anymore.

--- a/app/src/main/res/layout/activity_workout_statistics.xml
+++ b/app/src/main/res/layout/activity_workout_statistics.xml
@@ -6,20 +6,6 @@
     android:layout_height="match_parent"
     tools:context="com.finn.laakso.hangboardapp.WorkoutStatistics">
 
-    <ListView
-        android:id="@+id/workoutHistoryListView"
-        android:layout_width="wrap_content"
-        android:layout_height="300dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:choiceMode="singleChoice"
-        android:listSelector="?attr/colorControlHighlight"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-    </ListView>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -28,6 +14,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0"
             android:orientation="horizontal">
 
             <Button
@@ -44,31 +31,37 @@
                 android:layout_weight="1"
                 android:text="erase db history" />
 
+            <Button
+                android:id="@+id/showGraphsButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Show Graphs" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/workoutInfoTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="workoutInfoTextView"
-                android:visibility="visible" />
+            <ListView
+                android:id="@+id/workoutHistoryListView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:choiceMode="singleChoice"
+                android:listSelector="?attr/colorControlHighlight"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
 
-            <TextView
-                android:id="@+id/holdInfoTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="TextView"
-                android:visibility="visible" />
+
+            </ListView>
         </LinearLayout>
 
     </LinearLayout>
+
 
 </android.support.constraint.ConstraintLayout>
