--- a/app/src/main/res/layout/activity_workout_statistics.xml
+++ b/app/src/main/res/layout/activity_workout_statistics.xml
@@ -18,13 +18,6 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/editWorkoutButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Edit Workout" />
-
-            <Button
                 android:id="@+id/testButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -32,11 +25,26 @@
                 android:text="erase db history" />
 
             <Button
+                android:id="@+id/editWorkoutButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Edit Workout" />
+
+            <Button
+                android:id="@+id/newEntryButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="new entry" />
+
+            <Button
                 android:id="@+id/showGraphsButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Show Graphs" />
+
         </LinearLayout>
 
         <LinearLayout
