edit_workout_info layout now handles gridview so that buttons don't disappear when dealing with large gridview.

--- a/app/src/main/res/layout/activity_edit_workout_info.xml
+++ b/app/src/main/res/layout/activity_edit_workout_info.xml
@@ -13,7 +13,6 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
         android:layout_weight="1"
         android:alpha="0.2"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -21,47 +20,37 @@
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/lauta1011" />
 
-
-
-        <GridView
-            android:id="@+id/workoutInfoGridView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_weight="1"
-            android:columnWidth="75dp"
-            android:gravity="center"
-            android:numColumns="auto_fit">
-
-        </GridView>
-
-
-
     <LinearLayout
-        android:id="@+id/buttonLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
-        android:gravity="bottom|end"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="@+id/hangboardImageView"
-        app:layout_constraintStart_toStartOf="parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <Button
-            android:id="@+id/saveButton"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/buttonLayout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Save / Update Database" />
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="8dp"
+            android:gravity="bottom|end"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="@+id/hangboardImageView"
+            app:layout_constraintStart_toStartOf="parent">
 
-        <Button
-            android:id="@+id/backButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Back" />
+            <Button
+                android:id="@+id/saveButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Save / Update Database" />
+
+            <Button
+                android:id="@+id/backButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Back" />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/hangInfoTextView"
@@ -77,6 +66,29 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <GridView
+                android:id="@+id/workoutInfoGridView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_weight="1"
+                android:columnWidth="75dp"
+                android:gravity="center"
+                android:numColumns="auto_fit">
+
+            </GridView>
+        </LinearLayout>
+
+
+
     </LinearLayout>
+
+
 
 </android.support.constraint.ConstraintLayout>
