--- a/app/src/main/res/layout/content_workout_database_graphs.xml
+++ b/app/src/main/res/layout/content_workout_database_graphs.xml
@@ -14,6 +14,11 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
+        <com.github.mikephil.charting.charts.BarChart
+            android:id="@+id/workoutDatesBarChart"
+            android:layout_width="match_parent"
+            android:layout_height="400dp"></com.github.mikephil.charting.charts.BarChart>
+
         <com.github.mikephil.charting.charts.HorizontalBarChart
             android:id="@+id/singleHangsOrRepeatersBarChart"
             android:layout_width="match_parent"
@@ -47,25 +52,4 @@
 
 </LinearLayout>
 
-
-
-    <!--
-
-    <com.github.mikephil.charting.charts.LineChart
-        android:id="@+id/chart"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-        <com.github.mikephil.charting.charts.PieChart
-            android:id="@+id/idPieChart"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"></com.github.mikephil.charting.charts.PieChart>
-
-
-    </LinearLayout>-->
 </android.support.v4.widget.NestedScrollView>
