--- a/app/src/main/res/layout/content_workout_database_graphs.xml
+++ b/app/src/main/res/layout/content_workout_database_graphs.xml
@@ -14,6 +14,11 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/workoutTUTandWTLineChart"
+            android:layout_width="match_parent"
+            android:layout_height="400dp" />
+
         <com.github.mikephil.charting.charts.BarChart
             android:id="@+id/workoutDatesBarChart"
             android:layout_width="match_parent"
