filtering workout lists to show/hide hidden workouts now works through cursors and saving the hidden-information to a separate column in database.

--- a/app/src/main/res/layout/activity_workout_statistics.xml
+++ b/app/src/main/res/layout/activity_workout_statistics.xml
@@ -17,6 +17,13 @@
             android:layout_weight="0"
             android:orientation="horizontal">
 
+            <CheckBox
+                android:id="@+id/showHiddenCheckBox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Show Hidden" />
+
             <Button
                 android:id="@+id/testButton"
                 android:layout_width="wrap_content"
