--- a/app/src/main/res/layout/activity_edit_workout_info.xml
+++ b/app/src/main/res/layout/activity_edit_workout_info.xml
@@ -65,12 +65,11 @@
             android:id="@+id/hangInfoTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:gravity="bottom"
             android:text="TextView"
-            android:textAlignment="center"
+            android:textAlignment="textStart"
             app:layout_constraintBottom_toBottomOf="@+id/workoutInfoGridView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
