--- a/app/src/main/res/layout/workout_history_listview.xml
+++ b/app/src/main/res/layout/workout_history_listview.xml
@@ -2,32 +2,47 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/dateTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="13dp"
-        android:text="TextView" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/hangboardTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/dateTextView"
-        android:layout_marginStart="47dp"
-        android:layout_toEndOf="@+id/dateTextView"
-        android:text="TextView" />
+        <TextView
+            android:id="@+id/dateTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="13dp"
+            android:text="TextView" />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/difficultyTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/hangboardTextView"
-        android:layout_marginStart="65dp"
-        android:layout_toEndOf="@+id/hangboardTextView"
-        android:text="TextView" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/difficultyTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/dateTextView"
+            android:layout_alignBottom="@+id/dateTextView"
+            android:layout_marginStart="28dp"
+            android:layout_toEndOf="@+id/dateTextView"
+            android:layout_weight="1"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/hangboardTextView"
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/difficultyTextView"
+            android:layout_alignBottom="@+id/difficultyTextView"
+            android:layout_centerHorizontal="true"
+            android:layout_weight="1"
+            android:text="TextView" />
+    </LinearLayout>
 
 </RelativeLayout>
