--- a/app/src/main/res/layout/workout_history_listview.xml
+++ b/app/src/main/res/layout/workout_history_listview.xml
@@ -52,7 +52,9 @@
                 android:id="@+id/workoutDescriptionTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="TextView"
                 android:textSize="12sp" />
         </LinearLayout>
