--- a/app/src/main/res/layout/content_workout_database_graphs.xml
+++ b/app/src/main/res/layout/content_workout_database_graphs.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.finn.laakso.hangboardapp.WorkoutDatabaseGraphs"
+    tools:context="com.finn.laakso.hangboardapp.WorkoutStatistics"
     tools:showIn="@layout/activity_workout_database_graphs">
 
 
