--- a/app/src/main/res/layout/activity_workout_statistics.xml
+++ b/app/src/main/res/layout/activity_workout_statistics.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.finn.laakso.hangboardapp.WorkoutHistory">
+    tools:context="com.finn.laakso.hangboardapp.WorkoutHistoryActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
